# litepaperreader

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  SECURITY.md  USAGE.md  build_exe.py  docker-compose.yml  get-litepaperreader.py  install.ps1  install.py  install.sh  litepaper_config.yaml  mcp_server.py  pyproject.toml  start_server.bat  webui.py  webui_template.html
.codex-plugin/: plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-exe.yml  ci.yml  lint.yml  release.yml  test.yml
docs/: construction-plan.md  extraction-guide.md  goal.md  whitepaper-v1.0-udf-engine.md
litepaperreader/: __init__.py  cli.py
litepaperreader/adapters/: __init__.py  base.py  code_adapter.py  html_adapter.py  pdf_adapter.py  table_adapter.py
litepaperreader/connectors/: __init__.py  base.py  filesystem.py  git.py  web.py
litepaperreader/core/: __init__.py  cell.py  embedding.py  errors.py  purifier.py  retrieval.py  schema.py
litepaperreader/knowledge/: __init__.py  answer.py  package.py
litepaperreader/pipeline/: __init__.py  aggregators.py  config.py  extractor.py  filters.py  orchestrator.py  progress.py  splitters.py  tool.py  toolchain.py  watcher.py
litepaperreader/schemas/: paper.yaml  person.yaml  product.yaml
tests/: test_aggregators.py  test_answer.py  test_config.py  test_core.py  test_extractor.py  test_integration.py  test_phase23.py  test_progress.py  test_retrieval.py  test_schema.py  test_schema_loader.py  test_watcher.py
