[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litepaperreader"
version = "1.0.0-dev"
description = "Universal Data Flow Intelligence Engine — type-safe, traceable pipeline for documents, code, and data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["document-processing", "llm", "data-pipeline", "mcp", "structured-extraction"]
authors = [{name = "LitePaperReader Contributors"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pydantic>=2.7",
  "rank-bm25>=0.2.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
pdf = ["docling>=2.0", "markitdown>=0.1"]
embed = ["sentence-transformers>=2.2", "scikit-learn>=1.3"]
code = ["tree-sitter>=0.21", "tree-sitter-languages>=1.10"]
web = ["trafilatura>=1.0", "httpx>=0.25"]
yaml = ["pyyaml>=6.0"]
all = ["litepaperreader[dev,pdf,embed,code,web,yaml]"]

[project.urls]
Homepage = "https://github.com/ASDNNB/litepaperreader"
Repository = "https://github.com/ASDNNB/litepaperreader"
Documentation = "https://github.com/ASDNNB/litepaperreader"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["litepaperreader", "litepaperreader.*"]
exclude = ["tests*", "assets*"]

[tool.setuptools.package-data]
litepaperreader = ["schemas/*.yaml"]

[project.scripts]
litepaper = "litepaperreader.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
